# catframes

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  README.rst  catframes.bat  catframes.py  extent_override.py  images_fix_resolution.py  images_to_h264.sh  jpegs_to_h264.sh  most_common_image_resolution_in_the_folder.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  test.bat  test.py  to_h264.sh  to_webm.sh
ReadMe images/: usage.webm
catframes/: fix_resolution.py  main.py  most_common_image_resolution_in_the_folder.py  to_video.py  utils.py  version.py
docs/source/: conf.py  hardware_acceleration_of_compression.rst  index.rst
docs/source/_static/: custom.css
installer/: Catframes-LICENSE-EN.txt  Catframes-LICENSE-RU.txt  catframes.iss  environment.iss  test.pas
src/catframes/: catframes.py  catmanager.py
src/catframes/catmanager_sample/: _api_tester.py  _code_assembler.py  _prefix.py  main.py  sets_utils.py  task_flows.py  templog.py  tests.py  util_checker.py  windows.py  windows_base.py  windows_utils.py
src/catframes/catmanager_sample/test_api/: test_catframes_api.py
