[metadata]
name = catframes
version = 0.2.1
description = It concatenates directories with jpegs into videos via FFmpeg.
long_description = file: README.md
url = https://github.com/georgy7/catframes
author = Georgy Ustinov
author_email = httpcatharsis@gmail.com
license = CC0 1.0 Universal

[options]
packages =
    catframes
zip_safe = True

[options.entry_points]
console_scripts =
    catframes_most_common_image_resolution_in_the_folder = catframes.most_common_image_resolution_in_the_folder:run
    catframes_fix_resolution = catframes.fix_resolution:run
    catframes_to_video = catframes.to_video:run
