[metadata]
name = catframes
version = 1.0.4
description = It concatenates a directory with images into a video via FFmpeg.
long_description = file: README.rst
url = https://github.com/georgy7/catframes
author = Georgy Ustinov
author_email = georgy.ustinov.hello@gmail.com
license = CC0 1.0 Universal
license_file = LICENSE.txt

[options]
packages =
    catframes
zip_safe = True

[options.entry_points]
console_scripts =
    catframes_most_common_image_resolution_in_the_folder = catframes.most_common_image_resolution_in_the_folder:run
    catframes_fix_resolution = catframes.fix_resolution:run
    catframes_to_video = catframes.to_video:run
    catframes = catframes.main:run
